# pstop

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
choco/: pstop.nuspec
src/: app.rs  color_scheme.rs  config.rs  input.rs  main.rs
src/system/: collector.rs  cpu.rs  gpu.rs  memory.rs  winapi.rs
src/ui/: header.rs  help.rs  mod.rs  process_table.rs  setup_menu.rs
