[package]
name = "pstop"
version = "0.5.0"
edition = "2021"
description = "htop for Windows — beautiful, fast TUI system monitor with per-core CPU bars, memory/swap/network, tree view, process management, 7 color schemes, mouse support. Drop-in htop replacement for PowerShell & Windows Terminal."
license = "MIT"
repository = "https://github.com/marlocarlo/pstop"
homepage = "https://github.com/marlocarlo/pstop"
documentation = "https://github.com/marlocarlo/pstop#readme"
readme = "README.md"
keywords = ["htop", "top", "system-monitor", "process-viewer", "windows"]
categories = ["command-line-utilities", "os::windows-apis"]
authors = ["marlocarlo"]
exclude = ["target/", "image.png", ".github/"]

[[bin]]
name = "pstop"
path = "src/main.rs"

[[bin]]
name = "htop"
path = "src/bin/htop.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# System information
sysinfo = "0.38"

# Windows-specific APIs
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
] }
ntapi = "0.4"

# Error handling
anyhow = "1"

# Time handling
chrono = "0.4"

# Unicode width for proper column alignment
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
